# cctv-search

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  test_connection.py  test_extract_frame.py  test_matching.py  test_nvr_diagnose.py  turbo.json
apps/api/: Dockerfile  README.md  package.json  pyproject.toml
apps/api/docs/: api-reference.md  business-logic.md  setup-configuration.md  technical-architecture.md
apps/api/scripts/: EXTRACT_AND_DETECT_README.md  EXTRACT_AND_TRACK_README.md  README.md  extract_and_detect.py  test_connection.py  test_detector.py  test_matching.py  test_rfdetr.py
apps/api/src/cctv_search/: __init__.py  tracker.py
apps/api/tests/: test_api.py  test_integration.py  test_mocks.py  test_nvr.py  test_search.py
apps/web/: Dockerfile  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: object-list.tsx  stream-controls.tsx  video-player.tsx
apps/web/lib/: utils.ts
docs/: README.md  api-reference.md  business-logic.md  setup-configuration.md  technical-architecture.md
scripts/: EXTRACT_AND_TRACK_README.md  extract_and_track.py
src/cctv_search/: __init__.py  detector.py  tracker.py
src/cctv_search/ai/: __init__.py  byte_tracker.py  rf_detr.py  yolo.py
src/cctv_search/api/: __init__.py
src/cctv_search/nvr/: __init__.py  dahua.py
src/cctv_search/search/: __init__.py  algorithm.py
tests/: test_ai.py  test_api.py  test_integration.py  test_matching.py  test_nvr.py  test_placeholder.py  test_search.py
(+16 files in other folders)
