[project]
name = "cctv-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.2.4",
    "fastapi>=0.129.0",
    "lap>=0.5.12",
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "rfdetr>=1.4.3",
    "thop>=0.1.1.post2209072238",
    "trackers>=2.2.0",
    "uvicorn[standard]>=0.41.0",
]

[project.scripts]
cctv-search = "cctv_search:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cctv_search"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
